correct scaling on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -88,7 +88,7 @@ a {
     box-sizing: border-box;
     font-family: Roboto, Arial, Helvetica, sans-serif;
     color: rgb(3, 3, 3);
-    font-size: 34px;
+    font-size: 17px;
   }
 
 }
